[package]
name = "into_string"
description = "Helper crate to convert values into strings avoiding extra allocations"
version = "1.0.0"
edition = "2021"
authors = ["Alex Andreba <aandrebafreelancer@gmail.com>"]
repository = "https://github.com/Aandreba/into_string"
license = "MIT OR Apache-2.0"
keywords = ["string", "cast", "casting", "convert", "conversion"]
categories = ["no-std", "rust-patterns", "memory-management"]